Regression: Cycles OpenCL broken after Hair BVH commit #48808

Closed
opened 2016-07-07 19:36:00 +02:00 by mathieu menuet · 5 comments

System Information
Win 7 x 64, R9 280X, 16.2.2

Blender Version
Broken: after 4beae09bae
Worked: a19da5c10d

Short description of error
OpenCL won't build on AMD

Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=4
-D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__
NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9880: error: expected a ")"
  ccl_device_inline Transform make_transform_frame(const float3& N)
                                                               ^
"C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9880: error: unnamed prototyped parameters not allowed when body is present
  ccl_device_inline Transform make_transform_frame(const float3& N)
                              ^
"C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9882: error: identifier "N" is undefined
        const float3 dx0 = cross(make_float3(1.0f, 0.0f, 0.0f), N);
                                                                ^
"C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 65835: error: unnamed prototyped parameters not allowed when body is present
  ccl_device_inline bool bvh_unaligned_node_intersect_child_robust(
                         ^
4 errors detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl".
Frontend phase failed compilation.

Exact steps for others to reproduce the error
try to render the Barcelona scene with OpenCL

**System Information** Win 7 x 64, R9 280X, 16.2.2 **Blender Version** Broken: after 4beae09bae56e3f0116b745099a1226c82572bdd Worked: a19da5c10d2edac01070760438ae9bb1d89f1439 **Short description of error** OpenCL won't build on AMD ``` Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=4 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__ NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9880: error: expected a ")" ccl_device_inline Transform make_transform_frame(const float3& N) ^ "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9880: error: unnamed prototyped parameters not allowed when body is present ccl_device_inline Transform make_transform_frame(const float3& N) ^ "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 9882: error: identifier "N" is undefined const float3 dx0 = cross(make_float3(1.0f, 0.0f, 0.0f), N); ^ "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl", line 65835: error: unnamed prototyped parameters not allowed when body is present ccl_device_inline bool bvh_unaligned_node_intersect_child_robust( ^ 4 errors detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL1660T1.cl". Frontend phase failed compilation. ``` **Exact steps for others to reproduce the error** try to render the Barcelona scene with OpenCL
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Sergey Sharybin was assigned by Aaron Carlisle 2016-07-07 21:38:28 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@e53ca65c81

This issue was referenced by blender/cycles@e53ca65c811f47ae973dca03df0c896927bda452

This issue was referenced by a62967787c

This issue was referenced by a62967787cc9aa1bc6d4cca400e776b529838f4f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48808
No description provided.