Fix T48808: Regression: Cycles OpenCL broken after Hair BVH commit